# SSOEngine

./: .gitignore  CMakeLists.txt  CREDITS.md  HowToUseTools.md  HowToUseTools_REAL.md  INSTALL (MUST READ).txt  LICENSE  LICENSE_COMMERCIAL.txt  README.md  README_REAL.md
00_BuildTools/: sso_packer.cpp
01_Core/: build.bat  game.h  main.cpp  resource.rc
01_Core/assets/shaders/: basic_light.fs  bloom_glow.fs  blur_bokeh.fs  grayscale_sepia.fs  retro_crt.fs
01_Core/scripts/: enemy.h  player.h
01_Core/tools/: sso_3d.h  sso_camera.h  sso_container.h  sso_ext.h  sso_file.h  sso_logger.h  sso_math.h  sso_ph3d.h  sso_physics.h  sso_provider.h  sso_splash.h  sso_text.h  sso_timer.h  sso_ui.h  sso_window.h
02_Docs/Legal/: EULA.txt
03_Tools/: embedder.py
04_Docs/Legal/: EULA.txt
assets/: sample_asset.txt
examples/: example.cpp
